@@ -7,7 +7,6 @@ import efs.task.todoapp.init.annotationExecutors.annotations.PathVariable;
 import java.io.IOException;
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
@@ -22,18 +21,18 @@ public class PathVariableExecutor extends ParameterExecutor {
 
     @Override
     List<Object> execute(HttpExchange httpExchange, Method method) throws IOException, ClassNotFoundException, InvocationTargetException, IllegalAccessException {
-        var path = getPathFromMethod(method);
-
-        return Collections.emptyList();
-    }
-
-    private String getPathFromMethod(final Method method) {
-        return MAPPING_MAP.entrySet()
+        return List.of(MAPPING_MAP.entrySet()
                 .stream()
                 .filter(mappingRecordMethodEntry -> mappingRecordMethodEntry.getValue().equals(method))
                 .map(Map.Entry::getKey)
                 .map(MappingRecord::path)
                 .findFirst()
-                .orElseThrow(() -> new RuntimeException("Asda"));
+                .map(a -> getPathVariable(httpExchange.getRequestURI().getPath()))
+                .orElseThrow(() -> new RuntimeException("Asda")));
+    }
+
+    private String getPathVariable(String path) {
+        var tmp = path.split("/");
+        return tmp[tmp.length - 1];
     }
 }
